Changed S4_INPUT() and S4_OUTPUT() Array dimension is no longer const, entered in input() input() now can create the array from both the keyboard and from the file output() now has menu

--- a/sem3-5/sem3-5/sem3-5.vcxproj.filters
+++ b/sem3-5/sem3-5/sem3-5.vcxproj.filters
@@ -78,8 +78,14 @@
     <ClCompile Include="s3_new_sort.cpp">
       <Filter>Source Files\sem3</Filter>
     </ClCompile>
-    <ClCompile Include="new_output.cpp">
+    <ClCompile Include="s3_new_output.cpp">
       <Filter>Source Files\sem3</Filter>
+    </ClCompile>
+    <ClCompile Include="s4_new_output.cpp">
+      <Filter>Source Files\sem4</Filter>
+    </ClCompile>
+    <ClCompile Include="s4_new_input.cpp">
+      <Filter>Source Files\sem4</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
