--- a/sem3-5/sem3-5/sem3-5.vcxproj
+++ b/sem3-5/sem3-5/sem3-5.vcxproj
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="new_output.cpp" />
+    <ClCompile Include="s3_new_output.cpp" />
     <ClCompile Include="s3_new_sort.cpp" />
     <ClCompile Include="s4_identical.cpp" />
     <ClCompile Include="main_menu.cpp" />
@@ -129,6 +129,8 @@
     <ClCompile Include="s4_input.cpp" />
     <ClCompile Include="s4_main.cpp" />
     <ClCompile Include="s4_menu.cpp" />
+    <ClCompile Include="s4_new_input.cpp" />
+    <ClCompile Include="s4_new_output.cpp" />
     <ClCompile Include="s4_output.cpp" />
     <ClCompile Include="s4_search.cpp" />
     <ClCompile Include="s5_main.cpp" />
