Implemented stadafx.h Formatting edits

--- a/sem3-5/sem3-5/sem3-5.vcxproj
+++ b/sem3-5/sem3-5/sem3-5.vcxproj
@@ -76,6 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -94,6 +95,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -115,6 +117,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="array_display_1d.cpp" />
     <ClCompile Include="s3_new_output.cpp" />
     <ClCompile Include="s3_new_sort.cpp" />
     <ClCompile Include="s4_identical.cpp" />
@@ -132,11 +135,13 @@
     <ClCompile Include="s4_search.cpp" />
     <ClCompile Include="s5_main.cpp" />
     <ClCompile Include="s5_menu.cpp" />
+    <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="s3_dependances.h" />
     <ClInclude Include="s4_dependances.h" />
     <ClInclude Include="s5_dependances.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
