--- a/sem3-5/sem3-5/sem3-5.vcxproj.filters
+++ b/sem3-5/sem3-5/sem3-5.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClCompile Include="s4_new_input.cpp">
       <Filter>Source Files\sem4</Filter>
     </ClCompile>
+    <ClCompile Include="array_display_1d.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="stdafx.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="s3_dependances.h">
@@ -84,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="s5_dependances.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
