Changed the entire input process. The array in s4 is now pre-allocated with the side of [10], s4_array_size() handles the process of the size selection and checking. That fixed the error on delete[]ing the array in s4
Added some using std::'s
Formatting changes

--- a/sem3-5/sem3-5/sem3-5.vcxproj.filters
+++ b/sem3-5/sem3-5/sem3-5.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="s4_array_size.cpp">
+      <Filter>Source Files\sem4</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="s3_dependances.h">
