--- a/sem3-5/sem3-5/sem3-5.vcxproj
+++ b/sem3-5/sem3-5/sem3-5.vcxproj
@@ -41,7 +41,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -135,6 +135,7 @@
     <ClCompile Include="s4_search.cpp" />
     <ClCompile Include="s5_main.cpp" />
     <ClCompile Include="s5_menu.cpp" />
+    <ClCompile Include="s4_array_size.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
