--- a/sem3-5/sem3-5/sem3-5.vcxproj
+++ b/sem3-5/sem3-5/sem3-5.vcxproj
@@ -118,8 +118,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="s3_array_size.cpp" />
+    <ClCompile Include="s3_display_product.cpp" />
+    <ClCompile Include="s3_display_array.cpp" />
     <ClCompile Include="s3_output.cpp" />
     <ClCompile Include="s3_sort.cpp" />
+    <ClCompile Include="s4_display_identical.cpp" />
+    <ClCompile Include="s4_display_search.cpp" />
+    <ClCompile Include="s4_display_array.cpp" />
     <ClCompile Include="s4_identical.cpp" />
     <ClCompile Include="main_menu.cpp" />
     <ClCompile Include="s3_input.cpp" />
@@ -133,12 +138,14 @@
     <ClCompile Include="s4_input.cpp" />
     <ClCompile Include="s4_output.cpp" />
     <ClCompile Include="s4_search.cpp" />
+    <ClCompile Include="s5_display_words.cpp" />
     <ClCompile Include="s5_input.cpp" />
     <ClCompile Include="s5_main.cpp" />
     <ClCompile Include="s5_menu.cpp" />
     <ClCompile Include="s4_array_size.cpp" />
     <ClCompile Include="s5_output.cpp" />
-    <ClCompile Include="s5_word_parser.cpp" />
+    <ClCompile Include="s5_display_text.cpp" />
+    <ClCompile Include="s5_parse.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
