Fork of Seminar_3-5 - Start to converting to the OOP

--- a/sem3-5/sem3-5/sem3-5.vcxproj
+++ b/sem3-5/sem3-5/sem3-5.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="classes.h" />
     <ClInclude Include="s3_dependances.h" />
     <ClInclude Include="s4_dependances.h" />
     <ClInclude Include="s5_dependances.h" />
